// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button tinted variant renders default variant unchanged: default 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="group shrink-0 flex-row items-center justify-center gap-2 rounded-md bg-primary active:bg-primary/90 shadow-sm shadow-black/5 h-10 px-4 py-2 sm:h-9"
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
>
  <Text
    className="text-sm font-medium text-primary-foreground"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    Default
  </Text>
</View>
`;

exports[`Button tinted variant renders tinted variant with act tint: tinted-act 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="group shrink-0 flex-row items-center justify-center gap-2 rounded-md shadow-none border h-10 px-4 py-2 sm:h-9 bg-[hsl(var(--act)/0.08)] border-[hsl(var(--act)/0.30)]"
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
>
  <Text
    className="text-sm font-medium text-[hsl(var(--act))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    act
  </Text>
</View>
`;

exports[`Button tinted variant renders tinted variant with aqua tint: tinted-aqua 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="group shrink-0 flex-row items-center justify-center gap-2 rounded-md shadow-none border h-10 px-4 py-2 sm:h-9 bg-[hsl(var(--aqua)/0.08)] border-[hsl(var(--aqua)/0.30)]"
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
>
  <Text
    className="text-sm font-medium text-[hsl(var(--aqua))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    aqua
  </Text>
</View>
`;

exports[`Button tinted variant renders tinted variant with be tint: tinted-be 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="group shrink-0 flex-row items-center justify-center gap-2 rounded-md shadow-none border h-10 px-4 py-2 sm:h-9 bg-[hsl(var(--be)/0.08)] border-[hsl(var(--be)/0.30)]"
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
>
  <Text
    className="text-sm font-medium text-[hsl(var(--be))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    be
  </Text>
</View>
`;

exports[`Button tinted variant renders tinted variant with clay tint: tinted-clay 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="group shrink-0 flex-row items-center justify-center gap-2 rounded-md shadow-none border h-10 px-4 py-2 sm:h-9 bg-[hsl(var(--clay)/0.08)] border-[hsl(var(--clay)/0.30)]"
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
>
  <Text
    className="text-sm font-medium text-[hsl(var(--clay))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    clay
  </Text>
</View>
`;

exports[`Button tinted variant renders tinted variant with ink tint: tinted-ink 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="group shrink-0 flex-row items-center justify-center gap-2 rounded-md shadow-none border h-10 px-4 py-2 sm:h-9 bg-[hsl(var(--ink)/0.08)] border-[hsl(var(--ink)/0.30)]"
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
>
  <Text
    className="text-sm font-medium text-[hsl(var(--ink))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    ink
  </Text>
</View>
`;

exports[`Button tinted variant renders tinted variant with iris tint: tinted-iris 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="group shrink-0 flex-row items-center justify-center gap-2 rounded-md shadow-none border h-10 px-4 py-2 sm:h-9 bg-[hsl(var(--iris)/0.08)] border-[hsl(var(--iris)/0.30)]"
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
>
  <Text
    className="text-sm font-medium text-[hsl(var(--iris))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    iris
  </Text>
</View>
`;

exports[`Button tinted variant renders tinted variant with mist tint: tinted-mist 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="group shrink-0 flex-row items-center justify-center gap-2 rounded-md shadow-none border h-10 px-4 py-2 sm:h-9 bg-[hsl(var(--mist)/0.08)] border-[hsl(var(--mist)/0.30)]"
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
>
  <Text
    className="text-sm font-medium text-[hsl(var(--mist))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    mist
  </Text>
</View>
`;

exports[`Button tinted variant renders tinted variant with primary tint: tinted-primary 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="group shrink-0 flex-row items-center justify-center gap-2 rounded-md shadow-none border h-10 px-4 py-2 sm:h-9 bg-primary/[0.08] border-primary/30"
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
>
  <Text
    className="text-sm font-medium text-primary"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    primary
  </Text>
</View>
`;

exports[`Button tinted variant renders tinted variant with think tint: tinted-think 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="group shrink-0 flex-row items-center justify-center gap-2 rounded-md shadow-none border h-10 px-4 py-2 sm:h-9 bg-[hsl(var(--think)/0.08)] border-[hsl(var(--think)/0.30)]"
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
>
  <Text
    className="text-sm font-medium text-[hsl(var(--think))]"
    style={
      [
        {
          "fontFamily": "NotoSans_500Medium",
        },
        undefined,
      ]
    }
  >
    think
  </Text>
</View>
`;
